# easy-gg-bedwars-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py  tools.py
docs_cache/: events.json  objects.json  services.json  types.json  utilities.json
docs_cache/fandom/: README.md
maintenance/: refresh_docs_cache.py  refresh_fandom_cache.py  refresh_official_docs_cache.py  watch_hitreg_sync.py
scripts/: main.lua
scripts/examples/: ability_speed.lua  emerald_generator.lua  player_join_message.lua  projectile_grass_spell.lua  shop_custom_items.lua  simple_ui.lua  weapon_swing_reward.lua
scripts/projects/default/: project.json
scripts/projects/default/prompts/: brief.md
scripts/projects/default/sync/: main.lua
src/creative_scripting_mcp/: __init__.py  server.py  tools.py
tests/: test_docs_and_validation.py  test_fandom_cache.py  test_reference_analysis.py  test_sync_transport.py
